applications/prd/wefood-drive/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wefood-drive
  namespace: wedigitek-prd
  labels:
    app: wefood-drive
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wefood-drive
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-nodejs: "monitoring/nodejs-instrumentation"
      labels:
        app: wefood-drive
    spec:
      imagePullSecrets:
      - name: ghcr-pull-secret
      containers:
      - name: wefood-drive
        image: ghcr.io/wedigitek/wefood-drive:rc
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "25m"
          limits:
            memory: "256Mi"
            cpu: "200m"
