applications/prd/wefood-drive/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wefood-drive
  namespace: wedigitek-prd
spec:
  selector:
    app: wefood-drive
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
