applications/prd/wefood-drive/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wefood-drive
  namespace: wedigitek-prd
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  tls:
  - hosts:
    - drive.trywefood.dev
    secretName: wefood-drive-tls

  rules:
  - host: drive.trywefood.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wefood-drive
            port:
              number: 80
